[package]
name = "nftracker"
version = "0.1.0"
authors = ["Bodo Junglas <junglas@objectcode.de>"]
edition = "2018"

[dependencies]
actix = "0.8"
actix-web = "1.0"
nom = "5.0.0-beta2"
log = "0.4"
env_logger = "0.6"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
toml = "0.5"

[dev-dependencies]
spectral = "0.6"
